table alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,3 @@ h1{
 #error {
     text-align: center;
 }
-td{
-    text-align: justify;
-}
